@@ -1633,6 +1633,15 @@
             "kseo"
          ]
       },
+      "KwangHyuk Kim" : {
+         "emails" : [
+            "hyuki.kim@samsung.com"
+         ],
+         "expertise" : "Webkit-EFL, Tiled BackingStore",
+         "nicks" : [
+            "hyuki"
+         ]
+      },
       "L\u00E1szl\u00F3 Lang\u00F3" : {
          "emails" : [
             "llango.u-szeged@partner.samsung.com",
