@@ -1,3 +1,9 @@
+2014-12-18  KwangHyuk Kim  <hyuki.kim@samsung.com>
+
+        Unreviewed, moved myself to the list of committers.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2014-12-18  Brent Fulgham  <bfulgham@apple.com>
 
         [Win] Update DumpRenderTree to more closely match Mac version
